[gd_scene load_steps=5 format=3 uid="uid://d1ui8lkg8n8hk"]

[ext_resource type="Script" path="res://Scene/hub.gd" id="1_tbohb"]
[ext_resource type="Texture2D" uid="uid://jskdd11ngeoe" path="res://Art_PNG/Item_Bullet, Single.png" id="2_8dog2"]
[ext_resource type="Texture2D" uid="uid://x8dvvvrt701i" path="res://Art_PNG/Item_Equipment_Chest, v2.png" id="3_arqkn"]
[ext_resource type="Texture2D" uid="uid://c2kbx8cind26s" path="res://Art_PNG/Monster_Drowned (Gun), Placeholder.png" id="4_j0yrg"]

[node name="Hub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbohb")

[node name="Buttons" type="HBoxContainer" parent="." groups=["Ui"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -15.5
offset_right = 90.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="missions" type="Button" parent="Buttons"]
layout_mode = 2
text = "Missions"

[node name="stash" type="Button" parent="Buttons"]
layout_mode = 2
text = "stash"

[node name="shop" type="Button" parent="Buttons"]
layout_mode = 2
text = "shop"

[node name="Mission" type="Control" parent="." groups=["Ui"]]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Mission"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_8dog2")

[node name="back" type="Button" parent="Mission"]
layout_mode = 0
offset_left = 891.0
offset_top = 499.0
offset_right = 956.0
offset_bottom = 534.0
text = "back"

[node name="Stash" type="Control" parent="." groups=["Ui"]]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Stash"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_arqkn")

[node name="back" type="Button" parent="Stash"]
offset_left = 891.0
offset_top = 499.0
offset_right = 956.0
offset_bottom = 534.0
text = "back"

[node name="shop" type="Control" parent="." groups=["Ui"]]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="shop"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_j0yrg")

[node name="back" type="Button" parent="shop"]
offset_left = 891.0
offset_top = 499.0
offset_right = 956.0
offset_bottom = 534.0
text = "back"

[connection signal="pressed" from="Buttons/missions" to="." method="_on_missions_pressed"]
[connection signal="pressed" from="Buttons/stash" to="." method="_on_stash_pressed"]
[connection signal="pressed" from="Buttons/shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="Mission/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Stash/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="shop/back" to="." method="_on_back_pressed"]
